# pikaraoke

./: .commitlintrc.yml  .dockerignore  .gitignore  .release-please-manifest.json  CLAUDE.md  Dockerfile  Dockerfile.alpine  README  README.md  TRANSLATION.md  _TRANSLATION.md  app.py  babel.cfg  build_windows_installer.bat  build_windows_installer.ps1  commitlint.config.js  constants.py  docker-compose.yml  file.py  get_platform.py  index.html  installer.iss  karaoke.py  messages.pot  omxclient.py  openapi.json  package-lock.json  package.json  pikaraoke.bat  pikaraoke.sh  pikaraoke.spec  pyproject.toml  release-please-config.json  requirements.txt  run-local.sh  run.sh  screencapture.sh  setup-pi.sh  setup-windows.bat  setup.sh  (+3 more)
.claude/: CLAUDE.md  settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: api-docs.yml  build-all-binaries.yml  ci.yml  deploy-release.yml  release-please.yml  release-windows-exe.yml
api/: index.html
build_scripts/: build_app.py  update_translations.py
build_scripts/ci/: docker-smoketest.sh  smoketest.ps1  smoketest.sh
build_scripts/common/: pikaraoke.spec
build_scripts/docker/: Dockerfile  Dockerfile-alpine  build_arm64_amd64.sh  docker-compose.yml.example
build_scripts/install/: install.ps1  install.sh
build_scripts/linux/: AppRun  create_appimage.py  pikaraoke.desktop
build_scripts/macos/: create_app_bundle.py
build_scripts/windows/: build_windows_installer.bat  build_windows_installer.ps1  installer.iss  pikaraoke.spec  windows_desktop_icon.bat  windows_post_install.bat  windows_pre_uninstall.bat
code_quality/: .docstr.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .yamllint
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.debian  README.md  build.alpine.sh  build.debian.sh  build.sh  build_arm64_amd64.sh  docker-compose.yml  docker-compose.yml.example  entrypoint.sh
docker/ffmpeg/: APKBUILD
docker/pikaraoke/: .env  README  env
docs/: BRIEFCASE_MIGRATION.md  BUILDING.md  README.md  TROUBLESHOOTING.md  USER_STORIES.md  USER_STORIES_TODO.md  mockup.html  openapi.json  style-brutalist.html  style-mazury.html  style-organic.html  style-retro.html
docs/api/: index.html
lib/: browser.py  file_resolver.py  get_platform.py  parse_args.py  vlcclient.py
pikaraoke/: CHANGELOG.md  _TRANSLATION.md  __init__.py  __main__.py  app.py  babel.cfg  config.py  constants.py  dev.py  karaoke.py  messages.pot  setup_apt.py  version.py
pikaraoke/lib/: args.py  audio_devices.py  audio_fingerprint.py  audio_processor.py  background_music.py  bluetooth.py  browser.py  current_app.py  database.py  demucs_processor.py  download_manager.py  events.py  ffmpeg.py  file_resolver.py  get_platform.py  interstitial_music_player.py  karaoke_database.py  keep_awake.py  library_scanner.py  logger.py  lyrics.py  lyrics_align.py  lyrics_audio_probe.py  lyrics_consensus.py  lyrics_language_classifier.py  metadata_parser.py  metadata_providers.py  mic_manager.py  music_metadata.py  network.py  omxclient.py  on_screen_notification.py  parse_args.py  play_history_manager.py  playback_controller.py  preference_manager.py  queue_manager.py  raspi_wifi_config.py  selenium.py  setup_wifi.py  (+13 more)
pikaraoke/routes/: admin.py  admin_history.py  admin_routes.py  auth_routes.py  background_music.py  batch_song_renamer.py  controller.py  file_routes.py  files.py  history.py  history_api.py  home.py  home_routes.py  images.py  info.py  karaoke_routes.py  metadata_api.py  now_playing.py  preferences.py  queue.py  search.py  sessions.py  sessions_api.py  socket_events.py  splash.py  stream.py  subtitle.py  subtitle_jobs.py  wifi.py
pikaraoke/scripts/: pikaraoke.sh  setup.sh
pikaraoke/static/: bucky_op1.ass  bulma-dark.css  bulma.min.css  custom.css  fireworks.js  js.cookie-2.2.1.min.js  lodash.min.js  score.css  score.js  screensaver.css  screensaver.js  selectize.min.css  spa-navigation.js
pikaraoke/templates/: admin_history.html  base.html  batch-song-renamer.html  edit.html  files.html  history.html  home.html  info.html  login.html  performers.html  queue.html  rankings.html  search.html  sessions.html  splash.html  wifi.html
resources/windows/: .gitkeep
scripts/: README.md  capture_alignment_fixture.py  config.txt  entrypoint.sh  how-to-image.md  itunes_bulk_report.py  itunes_report.csv  pikaraoke.sh  prepare_pi_image.sh  setup.sh  wpa_supplicant.conf.example
static/: bulma-dark.css  custom.css  screensaver.css  screensaver.js  selectize.min.js
static/fontello/: LICENSE.txt  config.json  demo.html
static/fontello-old/: LICENSE.txt  config.json  demo.html
tasks/: enrichment-trigger-bug.md  lyrics-instrumental-fix-plan.md  subtitle-orchestrator-phase-1.md  subtitle-self-healing-phase-4.md  subtitle-smart-selection-phase-3.md  subtitle-status-chips-phase-2.md  todo.md
templates/: base.html  downloading.html  edit.html  files.html  home.html  info.html  login.html  queue.html  search.html  splash.html
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_consensus_resync.py  test_lyrics_align_mam_te_moc.py  test_lyrics_align_queen_iwtbf.py  test_lyrics_align_total_eclipse.py  test_subtitle_picker_e2e.py
tests/js/: now-playing-bar.test.js  subtitle-source-picker.test.js
tests/unit/: test_args.py  test_audio_fingerprint.py  test_audio_processor.py  test_batch_renamer.py  test_database.py  test_demucs_processor.py  test_download_manager.py  test_events.py  test_ffmpeg.py  test_file_resolver.py  test_files_routes.py  test_get_platform.py  test_history_routes.py  test_karaoke.py  test_karaoke_database.py  test_karaoke_delegation.py  test_karaoke_queue.py  test_karaoke_utils.py  test_karaoke_word_level.py  test_keep_awake.py  test_library_scanner.py  test_lyrics.py  test_lyrics_align.py  test_lyrics_audio_probe.py  test_lyrics_consensus.py  test_lyrics_language_classifier.py  test_metadata_parser.py  test_metadata_providers.py  test_music_metadata.py  test_network.py  test_now_playing_routes.py  test_play_history_manager.py  test_preference_routes.py  (+24 more)
tests_e2e/: conftest.py  test_sanity.py
(+88 files in other folders)
