[project]
name = "pikaraoke"
version = "1.16.0"
description = "Youtube-based Karaoke machine for Raspberry Pi, OSX, Windows, and Linux"
authors = [{name = "Vic Wong"}]
readme = "docs/README.md"
requires-python = ">=3.10"
keywords = ["karaoke", "ktv", "video", "audio", "youtube", "raspberry-pi", "osx", "windows", "linux"]
classifiers = [
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Games/Entertainment"
]
dependencies = [
  "CherryPy==18.10.0",
  "Flask==2.2.5",
  "qrcode==7.4.2",
  "psutil==6.0.0",
  "requests==2.32.4",
  "flask-paginate==2021.10.29",
  "jinja2==3.1.6",
  "Babel==2.9.1",
  "Flask-Babel==2.0.0",
  "selenium==4.21.0",
  "ffmpeg-python==0.2.0",
  "yt-dlp[default]>=2025.12.8",
  "flask-socketio>=5.5.0",
  "gevent>=24.11.1",
  "flasgger>=0.9.5",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
pikaraoke = "pikaraoke.app:main"
pikaraoke-setup = "pikaraoke.setup_apt:main"

[project.urls]
Homepage = "https://github.com/vicwomg/pikaraoke"
Repository = "https://github.com/vicwomg/pikaraoke"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pikaraoke"]

# Poetry-specific configuration (reads from [project] above)
[tool.poetry]
package-mode = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.coverage.run]
omit = [
    "pikaraoke/setup_apt.py",
    "pikaraoke/constants.py",
    "pikaraoke/app.py",
    "pikaraoke/lib/current_app.py",
    "pikaraoke/lib/args.py",
]

# Briefcase configuration for cross-platform packaging
[tool.briefcase]
project_name = "PiKaraoke"
bundle = "com.pikaraoke"
version = "1.16.0"
url = "https://github.com/vicwomg/pikaraoke"

[tool.briefcase.app.pikaraoke]
formal_name = "PiKaraoke"
description = "Youtube-based Karaoke machine for Raspberry Pi, OSX, Windows, and Linux"
long_description = """A "KTV"-style karaoke system that provides a web interface for searching YouTube, queuing songs, and playing karaoke videos with pitch shifting and background music."""
sources = ["pikaraoke"]
test_sources = ["tests"]
license.file = "docs/LICENSE"

# Entry point - Briefcase will use pikaraoke/__main__.py

# Icon paths (Briefcase auto-converts to platform-specific formats)
icon = "pikaraoke/static/icons/logo"
installer_icon = "pikaraoke/static/icons/logo"


# Splash screen (optional)
# splash = "pikaraoke/static/splash"

requires = [
    "CherryPy==18.10.0",
    "Flask==2.2.5",
    "qrcode==7.4.2",
    "psutil==6.0.0",
    "requests==2.32.4",
    "flask-paginate==2021.10.29",
    "jinja2==3.1.6",
    "Babel==2.9.1",
    "Flask-Babel==2.0.0",
    "selenium==4.21.0",
    "ffmpeg-python==0.2.0",
    "yt-dlp[default]>=2025.12.8",
    "flask-socketio>=5.5.0",
    "gevent>=24.11.1",
    "flasgger>=0.9.7.1",
]

# macOS-specific configuration
[tool.briefcase.app.pikaraoke.macOS]
# Build universal binaries (Intel + Apple Silicon)
universal_build = true

# Minimum macOS version
# deployment_target = "10.13"

# Entitlements for macOS sandboxing (optional)
# entitlement = "pikaraoke/entitlements.plist"

# Info.plist customizations
[tool.briefcase.app.pikaraoke.macOS.info]
CFBundleDisplayName = "PiKaraoke"
NSHighResolutionCapable = true
LSUIElement = false  # Show in Dock and display window

# macOS system requirements (user must install)
# FFmpeg is not bundled - users install via Homebrew
system_requires = []

# Windows-specific configuration
[tool.briefcase.app.pikaraoke.windows]
# Include FFmpeg binaries (downloaded during CI build, added to base sources)
sources = ["resources/windows"]

# Console visibility (false = GUI app, true = console app)
# Set to true to absorb yt-dlp and ffmpeg subprocess console windows
console_app = true

# Set to true to have the app appear in the Start menu
install_launcher = true

# Installation scripts (executed from installed location)
post_install_script = "build_scripts/windows/windows_post_install.bat"
pre_uninstall_script = "build_scripts/windows/windows_pre_uninstall.bat"

# Installer options presented to user during installation
[[tool.briefcase.app.pikaraoke.install_option]]
name = "desktop_shortcut"
title = "Desktop Shortcut"
description = "Create a desktop shortcut for PiKaraoke"
default = true

[[tool.briefcase.app.pikaraoke.install_option]]
name = "headless_shortcut"
title = "Headless Shortcut"
description = "Create a desktop shortcut for PiKaraoke (Headless mode)"
default = false

# Uninstaller options presented to user during uninstallation
[[tool.briefcase.app.pikaraoke.uninstall_option]]
name = "remove_data"
title = "Remove User Data"
description = "Delete downloaded songs, logs, and configuration files"
default = false

[[tool.briefcase.app.pikaraoke.uninstall_option]]
name = "remove_shortcuts"
title = "Remove Shortcuts"
description = "Delete desktop shortcuts created during installation"
default = true

# Linux-specific configuration
[tool.briefcase.app.pikaraoke.linux]
# AppImage format (modern, portable)
# system_installer = "appimage"

# System packages required (installed by package manager)
system_requires = [
    # FFmpeg as system requirement
    "ffmpeg",
]

# Desktop entry customizations
# categories = ["AudioVideo", "Audio"]
