[project]
name = "pikaraoke"
version = "1.18.1"
description = "Youtube-based Karaoke machine for Raspberry Pi, OSX, Windows, and Linux"
authors = [{name = "Vic Wong"}]
readme = "docs/README.md"
requires-python = ">=3.10"
keywords = ["karaoke", "ktv", "video", "audio", "youtube", "raspberry-pi", "osx", "windows", "linux"]
classifiers = [
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Games/Entertainment"
]
dependencies = [
  "Flask==2.2.5",
  "qrcode[png]==8.2",
  "psutil==7.2.1",
  "requests==2.32.5",
  "flask-paginate==2024.4.12",
  "jinja2==3.1.6",
  "Babel==2.17.0",
  "Flask-Babel==4.0.0",
  "ffmpeg-python==0.2.0",
  "yt-dlp[default]>=2026.1.29",
  "flask-socketio>=5.5.0",
  "gevent>=24.11.1",
  "flasgger>=0.9.5",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",

]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
pikaraoke = "pikaraoke.app:main"

[project.urls]
Homepage = "https://github.com/vicwomg/pikaraoke"
Repository = "https://github.com/vicwomg/pikaraoke"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pikaraoke"]

# Poetry-specific configuration (reads from [project] above)
[tool.poetry]
package-mode = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.coverage.run]
omit = [
    "pikaraoke/constants.py",
    "pikaraoke/app.py",
    "pikaraoke/lib/current_app.py",
    "pikaraoke/lib/args.py",
]
